
*** vc-git changes

**** The new variable vc-git-add-signoff can be used to add a
Signed-off-by line when committing.

**** Support for operating with stashes has been added to vc-dir: the stash list is
displayed in the *vc-dir* header, stashes can be created, removed, applied and
their content displayed.

**** vc-dir displays the stash status

*** log-edit-strip-single-file-name controls whether or not single filenames
are stripped when copying text from the ChangeLog to the *VC-Log* buffer.

** Elint

---
*** Elint now uses compilation-mode.

---
*** Elint can now scan individual files and whole directories,
and can be run in batch mode.

---
*** Elint does a more thorough initialization, and recognizes more built-in
functions and variables.  Customize `elint-scan-preloaded' if you want
to sacrifice some accuracy for a faster startup.

---
*** Elint attempts some basic understanding of featurep and (f)boundp tests.

---
*** Customize `elint-ignored-warnings' to suppress some warnings.

** Miscellaneous

*** The new command `async-shell-command' bound globally to `M-&' executes
the command asynchronously without the need to manually add ampersand to
the end of the command.  Its output appears in the buffer `*Async Shell
Command*'.

*** Isearch searches in the comint/shell input history when the new variable
`comint-history-isearch' is non-nil.  New commands `comint-history-isearch-backward'
and `comint-history-isearch-backward-regexp' (bound to M-r) start Isearch
in the input history regardless of the value of `comint-history-isearch'.

*** Interactively `multi-isearch-buffers' and `multi-isearch-buffers-regexp'
read buffer names to search, one by one, ended with RET.  With a prefix
argument, they ask for a regexp, and search in buffers whose names match
the specified regexp.  Interactively `multi-isearch-files' and
`multi-isearch-files-regexp' read file names to search, one by one,
ended with RET.  With a prefix argument, they ask for a wildcard, and